--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Setup node
         uses: actions/setup-node@v1
+        with:
+          node-version: '12'
       - run: sed -i 's/VSSUECLIENTID/${{ secrets.VSSUECLIENTID }}/g' docs/.vuepress/config.js
       - run: sed -i 's/VSSUECLIENTSECRET/${{ secrets.VSSUECLIENTSECRET }}/g' docs/.vuepress/config.js
       - run: yarn install
